--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Test3</title>
+    <title>Crud</title>
   </head>
   <body>
     <div class="container col-8">
@@ -56,7 +56,7 @@
            
             <tr class="text-left total total-row">
               <td colspan="2"><b>Total </b></td>
-              <td class="text-center result ">69</td>
+              <td class="text-center result "></td>
               <td colspan="3"></td>
             </tr>
           </tbody>
